--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
   <body>
-<a href="Xfce4_crdp2.sh" target="_blank>Xfce4_crdp2.sh</a>
-<a href="crdp.sh" target="_blank>crdp.sh</a>
-<a href="gnome_crdp.sh" target="_blank>gnome_crdp.sh</a>
-<a href="xfce4_crdp.sh" target="_blank>xfce4_crdp.sh</a>
-<a href="xrdp_xfce4.sh" target="_blank>xrdp_xfce4.sh</a>
+    <ul>
+      <li><a href="Xfce4_crdp2.sh" target="_blank>Xfce4_crdp2.sh</a></li>
+<li><a href="crdp.sh" target="_blank>crdp.sh</a></li>
+<li><a href="gnome_crdp.sh" target="_blank>gnome_crdp.sh</a></li>
+<li><a href="xfce4_crdp.sh" target="_blank>xfce4_crdp.sh</a></li>
+<li><a href="xrdp_xfce4.sh" target="_blank>xrdp_xfce4.sh</a></li>
+    </ul>                              
   <body
 </html>                               
