--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <body>
     <ul>
-      <li><a href="/Xfce4_crdp2.sh">Xfce4_crdp2.sh</a></li>
-       <li><a href="/crdp.sh">crdp.sh</a></li>
-      <li><a href="/gnome_crdp.sh">gnome_crdp.sh</a></li>
-       <li><a href="/xfce4_crdp.sh">xfce4_crdp.sh</a></li>
-      <li><a href="/xrdp_xfce4.sh">xrdp_xfce4.sh</a></li>
+      <li><a href="https://animeshxd.github.io/remote-desktop/Xfce4_crdp2.sh">Xfce4_crdp2.sh</a></li>
+       <li><a href="https://animeshxd.github.io/remote-desktop/crdp.sh">crdp.sh</a></li>
+      <li><a href="https://animeshxd.github.io/remote-desktop/gnome_crdp.sh">gnome_crdp.sh</a></li>
+       <li><a href="https://animeshxd.github.io/remote-desktop/xfce4_crdp.sh">xfce4_crdp.sh</a></li>
+      <li><a href="https://animeshxd.github.io/remote-desktop/xrdp_xfce4.sh">xrdp_xfce4.sh</a></li>
     </ul>                              
   <body
 </html>                               
