--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       <li><a href="https://animeshxd.github.io/remote-desktop/gnome_crdp.sh">gnome_crdp.sh</a></li>
        <li><a href="https://animeshxd.github.io/remote-desktop/xfce4_crdp.sh">xfce4_crdp.sh</a></li>
       <li><a href="https://animeshxd.github.io/remote-desktop/xrdp_xfce4.sh">xrdp_xfce4.sh</a></li>
+       <li><a href="https://animeshxd.github.io/remote-desktop/sngrk.sh">sngrk.sh</a></li>
+     
     </ul>                              
   <body
 </html>                               
